Solve using the bi-section method

--- a/Courses/Computational Mathematics (ΥΦΥ101)/Problem Sets/retselis_set1_1.ipynb
+++ b/Courses/Computational Mathematics (ΥΦΥ101)/Problem Sets/retselis_set1_1.ipynb
@@ -25,6 +25,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us first import the necessary packages to solve this exercise using Python:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution for a)\n",
+    "\n",
+    "\n",
+    "Let's first examine the bi-section method. We are interested in also documenting the number of iterations required to achieve an accuracy of 5 significant digits. We will therefore use the **Scarborough criterion**, computing it in the beginning of our code and then calculating the approximate error of each iteration. We will meet the criterion once the approximater error is below the error given by the Scarborough formula."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Root found (after 19 repetitions)! x0 = 1.3046\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_lower = 0\n",
+    "x_upper = 2\n",
+    "n = 5 # Number of significant digits to be computed\n",
+    "xr = (x_lower+x_upper)/2\n",
+    "es = 0.5*pow(10, (2-n))\n",
+    "ea = 100\n",
+    "repetitions = 0\n",
+    "value_prev = 100\n",
+    "\n",
+    "f = lambda x : math.exp(x)-(2*x*math.cos(x))-3\n",
+    "\n",
+    "while ea>es:\n",
+    "    repetitions = repetitions + 1\n",
+    "    if f(x_lower)*f(xr)<0:\n",
+    "        x_upper = xr\n",
+    "        value = xr\n",
+    "    elif f(x_upper)*f(xr)<0:\n",
+    "        x_lower = xr\n",
+    "        value = xr\n",
+    "    ea = math.fabs((value-value_prev)*100/value)\n",
+    "    value_prev = xr\n",
+    "    xr = (x_lower+x_upper)/2\n",
+    "    \n",
+    "print('Root found (after %d repetitions)! x0 = %.4f' % (repetitions, xr))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Let's now examine the Newton-Raphson Method. We will again use the **Scarborough criterion** as the stopping condition, computing it in the beginning of our code and then calculating the approximate error of each iteration. We will stop the calculation once the approximate error is below the error given by the Scarborough formula."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
