Add problem statement for excercise 2

--- a/Courses/Computational Mathematics (ΥΦΥ101)/Problem Sets/retselis_set1.ipynb
+++ b/Courses/Computational Mathematics (ΥΦΥ101)/Problem Sets/retselis_set1.ipynb
@@ -489,8 +489,26 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "For both functions used in (a) and (b), we can clearly see that the Newton-Raphson method outperforms the bisection method."
+    "For both functions used in (a) and (b), we can clearly see that the Newton-Raphson method outperforms the bisection method.\n",
+    "\n",
+    "\n",
+    "# Excercise 2\n",
+    "\n",
+    "## Problem Statement\n",
+    "\n",
+    "Find the root to the following equation, using the $x=g(x)$ method (carefully select the $x=g(x)$ format that converges):\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "2e^{x}-3x^{2}=0, x [-1,1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
