--- a/Courses/Computational Mathematics (ΥΦΥ101)/Problem Sets/retselis_set1.ipynb
+++ b/Courses/Computational Mathematics (ΥΦΥ101)/Problem Sets/retselis_set1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -616,13 +616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "x=g(x) method:\n",
       "Root found with x=g(x) method (after 10 iterations)! x_root = -0.60374\n"
      ]
     }
@@ -649,7 +650,8 @@
     "    if iterations >= max_iterations:\n",
     "        break\n",
     "    #print('xr=%.5f xr_old=%.5f ea=%.5f es=%.5f' % (xr,xr_old,ea,es))\n",
-    "        \n",
+    "\n",
+    "print('x=g(x) method:')\n",
     "if iterations < max_iterations:\n",
     "    print('Root found with x=g(x) method (after %d iterations)! x_root = %.5f' % (iterations, xr))\n",
     "else:\n",
@@ -660,6 +662,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Solution using the Newton-Raphson Method\n",
+    "\n",
     "Let us now compare the $x=g(x)$ method to the Newton-Raphson Method. To solve $2e^{x}-3x^{2}=0$, let's assume:\n",
     "\n",
     "$$\n",
@@ -672,14 +676,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Root found with Newton-Raphson method (after 4 iterations)! x_root = -0.60374\n"
+      "Newton-Raphson Method:\n",
+      "Root found (after 4 iterations)! x_root = -0.60374\n"
      ]
     }
    ],
@@ -688,7 +693,6 @@
     "\n",
     "f = lambda x : 2*np.exp(x)-3*pow(x,2)\n",
     "fdot = lambda x : 2*np.exp(x)-6*x\n",
-    "\n",
     "\n",
     "x0 = -0.5\n",
     "max_iterations = 200\n",
@@ -707,15 +711,34 @@
     "        ea = math.fabs((xr-xr_old)*100/xr)\n",
     "    if iterations >= max_iterations:\n",
     "        break\n",
-    "    \n",
-    "print('Root found with Newton-Raphson method (after %d iterations)! x_root = %.5f' % (iterations, xr))"
+    "\n",
+    "print('Newton-Raphson Method:')\n",
+    "if iterations < max_iterations:\n",
+    "    print('Root found (after %d iterations)! x_root = %.5f' % (iterations, xr))\n",
+    "else:\n",
+    "    print('Max iterations reached without solution!')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using exactly the same initial guess, we notice that the Newton-Raphson method outperforms the $x=g(x)$ method. This happens because the error of each iteration is approximately the square of the previous iteration error."
+    "## Conclusion\n",
+    "\n",
+    "Using exactly the same initial guess for both methods, we notice that the Newton-Raphson method outperforms the $x=g(x)$ method. This happens because the error of each iteration is approximately the square of the previous iteration error.\n",
+    "\n",
+    "# Excercise 3\n",
+    "\n",
+    "## Problem Statement\n",
+    "\n",
+    "Find the Lagrange polynomials that have the same values as the given functions, as the points specified:\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "y(x)=1+sin(\\pi x),\\;&for\\;x=-1,0\\;and\\;1\\\\\n",
+    "f(x)=\\frac{1}{1+x^{2}},\\;&for\\;x=-5,-4,-3,..\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
