Add floating point arithmetic error explanation

--- a/Courses/Computational Mathematics (ΥΦΥ101)/Problem Sets/retselis_set1.ipynb
+++ b/Courses/Computational Mathematics (ΥΦΥ101)/Problem Sets/retselis_set1.ipynb
@@ -948,7 +948,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "The code used above can be used to calculate any Lagrange Interpolating Polynomial, given an initial set of data.\n",
+    "The code used above can be used to calculate any Lagrange Interpolating Polynomial, given an initial set of data. We can also notice in the final case that some of the terms of the Lagrange polynomial are smaller than $10^{-17}$, leading us to thinking that our computations are suffering from floating point arithmetic errors.\n",
     "\n",
     "# Exercise 4\n",
     "\n",
