Add function to calculate the tridiagonal matrix

--- a/Courses/Computational Electromagnetism and Applications (ΥΦΥ203)/Problem Sets/retselis_set1.ipynb
+++ b/Courses/Computational Electromagnetism and Applications (ΥΦΥ203)/Problem Sets/retselis_set1.ipynb
@@ -234,14 +234,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2. -1.  0.  0.  0.  0.  0.]\n",
+      " [-1.  2. -1.  0.  0.  0.  0.]\n",
+      " [ 0. -1.  2. -1.  0.  0.  0.]\n",
+      " [ 0.  0. -1.  2. -1.  0.  0.]\n",
+      " [ 0.  0.  0. -1.  2. -1.  0.]\n",
+      " [ 0.  0.  0.  0. -1.  2. -1.]\n",
+      " [ 0.  0.  0.  0.  0. -1.  2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n"
+    "\n",
+    "def initial_conditions(array):\n",
+    "    # Defines initial conditions for the problem\n",
+    "    # Input is a 2D array\n",
+    "    # Output is the 2D array with the applied initial/boundary conditions\n",
+    "    lower_limit = 2\n",
+    "    upper_limit = 11\n",
+    "    for i in range(lower_limit-1,upper_limit):\n",
+    "        array[0][i] = 1\n",
+    "        array[1][i+1] = 1\n",
+    "    return(array)\n",
+    "\n",
+    "def tridiagonal_matrix(size):\n",
+    "    # Returns a tridiagonal matrix for the implicit solution\n",
+    "    # Input is size of the matrix (dimensions size x size)\n",
+    "    # Output is the tridiagona matrix with 2 in main diagonal and -1 in the other two\n",
+    "    matrix = np.zeros((size, size))\n",
+    "    for columns in range(0,size):\n",
+    "        for rows in range(0,size):\n",
+    "            if columns == rows:\n",
+    "                matrix[rows][columns] = 2\n",
+    "            elif columns == rows + 1:\n",
+    "                matrix[rows][columns] = -1\n",
+    "            elif columns == rows -1:\n",
+    "                matrix[rows][columns] = -1\n",
+    "    return(matrix)\n",
+    "    \n",
+    "L = tridiagonal_matrix(7)\n",
+    "print(L)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
