Add identity matrix function

--- a/Courses/Computational Electromagnetism and Applications (ΥΦΥ203)/Problem Sets/retselis_set1.ipynb
+++ b/Courses/Computational Electromagnetism and Applications (ΥΦΥ203)/Problem Sets/retselis_set1.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,14 @@
       " [ 0.  0. -1.  2. -1.  0.  0.]\n",
       " [ 0.  0.  0. -1.  2. -1.  0.]\n",
       " [ 0.  0.  0.  0. -1.  2. -1.]\n",
-      " [ 0.  0.  0.  0.  0. -1.  2.]]\n"
+      " [ 0.  0.  0.  0.  0. -1.  2.]]\n",
+      "[[1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1.]]\n"
      ]
     }
    ],
@@ -280,9 +287,22 @@
     "            elif columns == rows -1:\n",
     "                matrix[rows][columns] = -1\n",
     "    return(matrix)\n",
-    "    \n",
+    "\n",
+    "def identity_matrix(size):\n",
+    "    # Returns an identity matrix given a desired size\n",
+    "    # Input is size of the matrix (dimensions size x size)\n",
+    "    # Output is the corresponding identity matrix\n",
+    "    matrix = np.zeros((size, size))\n",
+    "    for columns in range(0,size):\n",
+    "        for rows in range(0,size):\n",
+    "            if columns == rows:\n",
+    "                matrix[rows][columns] = 1\n",
+    "    return(matrix)\n",
+    "\n",
     "L = tridiagonal_matrix(7)\n",
-    "print(L)"
+    "print(L)\n",
+    "I = identity_matrix(7)\n",
+    "print(I)"
    ]
   },
   {
