Compute A,B and C matrices

--- a/Courses/Computational Electromagnetism and Applications (ΥΦΥ203)/Problem Sets/retselis_set1.ipynb
+++ b/Courses/Computational Electromagnetism and Applications (ΥΦΥ203)/Problem Sets/retselis_set1.ipynb
@@ -234,27 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2. -1.  0.  0.  0.  0.  0.]\n",
-      " [-1.  2. -1.  0.  0.  0.  0.]\n",
-      " [ 0. -1.  2. -1.  0.  0.  0.]\n",
-      " [ 0.  0. -1.  2. -1.  0.  0.]\n",
-      " [ 0.  0.  0. -1.  2. -1.  0.]\n",
-      " [ 0.  0.  0.  0. -1.  2. -1.]\n",
-      " [ 0.  0.  0.  0.  0. -1.  2.]]\n",
-      "[[1. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 1. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 1. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 1. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 1. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 1.]]\n"
+      "[[0.7345679 0.25      0.        0.        0.       ]\n",
+      " [0.25      0.7345679 0.25      0.        0.       ]\n",
+      " [0.        0.25      0.7345679 0.25      0.       ]\n",
+      " [0.        0.        0.25      0.7345679 0.25     ]\n",
+      " [0.        0.        0.        0.25      0.7345679]]\n"
      ]
     }
    ],
@@ -276,7 +267,7 @@
     "def tridiagonal_matrix(size):\n",
     "    # Returns a tridiagonal matrix for the implicit solution\n",
     "    # Input is size of the matrix (dimensions size x size)\n",
-    "    # Output is the tridiagona matrix with 2 in main diagonal and -1 in the other two\n",
+    "    # Output is the tridiagonal matrix with 2 in main diagonal and -1 in the other two\n",
     "    matrix = np.zeros((size, size))\n",
     "    for columns in range(0,size):\n",
     "        for rows in range(0,size):\n",
@@ -299,10 +290,49 @@
     "                matrix[rows][columns] = 1\n",
     "    return(matrix)\n",
     "\n",
-    "L = tridiagonal_matrix(7)\n",
-    "print(L)\n",
-    "I = identity_matrix(7)\n",
-    "print(I)"
+    "def matrix_addition(A, B):\n",
+    "    # Computes and returns the result of the addition for two matrices A and B\n",
+    "    # Input is the two matrices\n",
+    "    # Output is the result of the addition\n",
+    "    \n",
+    "    # Check if addition is possible\n",
+    "    if (A.shape[0] != B.shape[0] or A.shape[1] != B.shape[1]):\n",
+    "        raise ValueError('Matrices must have same number of rows and columns!')\n",
+    "    size = A.shape[1]\n",
+    "    result_matrix = np.zeros((size, size)) \n",
+    "    # Add matrices\n",
+    "    for columns in range(len(A)):\n",
+    "        for rows in range(len(B)):\n",
+    "            result_matrix[rows][columns] = A[rows][columns] + B[rows][columns]\n",
+    "    return(result_matrix)        \n",
+    "    \n",
+    "\n",
+    "def implicit_solution(grid, dx, dt, c, beta):\n",
+    "    size = grid.shape[1] - 2\n",
+    "    # Define L and I matrices\n",
+    "    L = tridiagonal_matrix(size)\n",
+    "    L_temp = beta * L\n",
+    "    I = identity_matrix(size)\n",
+    "    I = (pow(dx,2)/(c*pow(dt,2))) * I\n",
+    "    # Compute A, B, C and A^-1 matrices\n",
+    "    A = matrix_addition(L_temp,I)\n",
+    "    C = A\n",
+    "    L_temp = ((2*beta-1)/2) * L\n",
+    "    B = matrix_addition(L_temp, I)\n",
+    "    print(B)\n",
+    "    \n",
+    "    \n",
+    "    return(grid)\n",
+    "    \n",
+    "\n",
+    "size = 7\n",
+    "c = 1\n",
+    "dx = 0.1\n",
+    "dt = 0.9*dx/c\n",
+    "beta = 1/4\n",
+    "u = np.zeros((size, size)) \n",
+    "#u = initial_conditions(u)\n",
+    "u = implicit_solution(u, dx, dt, c, beta)"
    ]
   },
   {
