Add explanation for Molniya orbit's orbital elements

--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set1.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set1.ipynb
@@ -30,7 +30,27 @@
     "a &= 26617396\\:m \\\\\n",
     "\\Rightarrow a &= 26617.396\\:km\n",
     "\\end{split}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Considering that for $t=\\tau=0$ the line of the nodes coincides with OY axis of the ICRF reference frame and that the apogee of the orbit points towards the first point of aries (point $\\gamma$), we can determine that $\\Omega=270^{\\circ}$ and $\\omega=270^{\\circ}$. If we also take into account that for $t=\\tau=0$ the satellite finds itself at the perigee of the orbit, we can also determine that the mean anomaly is $M_{initial}=0$. We also note that the mean anomaly is given by the following equation:\n",
+    "\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "M &= n(t-\\tau) \\\\\n",
+    "\\Rightarrow Μ &= \\frac{360^{\\circ}}{T}(t-\\tau) \n",
+    "\\end{split}\n",
+    "$$\n",
+    "\n",
+    "The orbital elements of the Molniya orbit for $t=\\tau=0$ can be summarized below:\n",
+    "\n",
+    "|         Orbital Element         |     Value     |\n",
+    "|:-------------------------------:|:-------------:|\n",
+    "|         Semi-major axis         |  26617396 m   |\n",
+    "|           Eccentricity          |     $0.64$    |\n",
+    "|           Inclination           |     $63.4$    |\n",
+    "| Longitude of the ascending node | $270^{\\circ}$ |\n",
+    "|      Argument of pericenter     | $270^{\\circ}$ |\n",
+    "|           Mean anomaly          |       0       |"
    ]
   },
   {
