Define orbital elements to cartesian transformation

--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set1.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set1.ipynb
@@ -55,16 +55,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def cartesian_to_orbital_elements(r_vector, v_vector):\n",
+    "def orbital_elements_to_cartesian(a, e, i, Omega, omega, M, mu):\n",
     "    \n",
-    "    return()"
+    "    \n",
+    "    \n",
+    "    \n",
+    "    # Compute E using Newton-Raphson\n",
+    "    \n",
+    "    # Define initial value for E_0\n",
+    "    if M > -np.pi and M < 0:\n",
+    "        E_0 = M - e\n",
+    "    elif M > np.pi:\n",
+    "        E_0 = M + e\n",
+    "    else:\n",
+    "        E_0 = 0.1\n",
+    "    # Convert M to radians\n",
+    "    M = np.radians(M)\n",
+    "    # Define f and f dot\n",
+    "    f = lambda E : M-E+np.sin(E)\n",
+    "    fdot = lambda E : -1+np.cos(E)\n",
+    "    # Stopping criteria \n",
+    "    N = 15  # Number of significant digits to be computed\n",
+    "    max_repetitions = 100\n",
+    "    es = 0.5 * pow(10, (2 - N))  # Scarborough Criterion\n",
+    "    ea = 100\n",
+    "    E_prev = E_0\n",
+    "    repetitions = 0\n",
+    "    # Main Newton-Raphson loop\n",
+    "    while ea > es:\n",
+    "        repetitions = repetitions + 1\n",
+    "        E_next = E_prev - (f(E_prev)/fdot(E_prev))\n",
+    "        ea = np.fabs((E_next-E_prev)*100/E_next)\n",
+    "        E_prev = E_next\n",
+    "        if repetitions > max_repetitions:\n",
+    "            print('Max repetitions reached without achieving desired accuracy for E!')\n",
+    "            break\n",
+    "    E = E_next  \n",
+    "    # Compute x, xdot, y, ydot on the orbital plane\n",
+    "    x = a * (np.cos(E) - e)\n",
+    "    y = a * np.sqrt(1 - pow(e, 2)) * np.sin(E)\n",
+    "    r = np.sqrt(pow(x, 2) + pow(y, 2))\n",
+    "    n = np.sqrt(mu/pow(a, 3)) # Mean motion\n",
+    "    x_dot = -(n * pow(a, 2) / r) * np.sin(E)\n",
+    "    y_dot = (n * pow(a, 2) / r) * np.sqrt(1 - pow(e, 2)) * np.cos(E)\n",
+    "    # Rotation Matrices definition\n",
+    "    Omega = np.radians(Omega)\n",
+    "    omega = np.radians(omega)\n",
+    "    i = np.radians(i)\n",
+    "    P1 = np.array([[np.cos(omega),-np.sin(omega),0],\n",
+    "                   [np.sin(omega),np.cos(omega),0],\n",
+    "                   [0,0,1]])\n",
+    "    P2 = np.array([[1,0,0],\n",
+    "                   [0,np.cos(i),np.sin(i)],\n",
+    "                   [0,np.sin(i),np.cos(i)]])\n",
+    "    P3 = np.array([[np.cos(Omega),-np.sin(Omega),0],\n",
+    "                   [np.sin(Omega),np.cos(Omega),0],\n",
+    "                   [0,0,1]])\n",
+    "    # Compute cartesian coordinates\n",
+    "    x_y_vector = np.array([x,y,0])\n",
+    "    x_y_dot_vector = np.array([x_dot,y_dot,0])\n",
+    "    r_vector = np.matmul(np.matmul(np.matmul(P3, P2), P1),x_y_vector)\n",
+    "    v_vector = np.matmul(np.matmul(np.matmul(P3, P2), P1),x_y_dot_vector)\n",
+    "    return(r_vector, v_vector)\n",
+    "\n",
+    "\n",
+    "# Orbit definition\n",
+    "\n",
+    "a = 26617396  # Semi-major axis\n",
+    "e = 0.64  # Eccentricity\n",
+    "i = 63.4  # Inclination\n",
+    "Omega = 270  # Longitude of the Ascending Note\n",
+    "omega = 270  # Argument of pericenter\n",
+    "M = 0  # Mean Anomaly\n",
+    "\n",
+    "# System properties \n",
+    "\n",
+    "G = 6.6743*pow(10,-11)\n",
+    "M_earth = 5.977*pow(10,24)\n",
+    "mu = G*M_earth\n",
+    "\n",
+    "# Orbital elements -> Cartesian\n",
+    "r_vector, v_vector = orbital_elements_to_cartesian(a, e, i, Omega, omega, M, mu)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
