Minor grammar corrections

--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/ASTD_CompuLab1_Retselis.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/ASTD_CompuLab1_Retselis.ipynb
@@ -7,7 +7,8 @@
     "Computational Astrodynamics (ΥΦΥ204)\n",
     "\n",
     "Implemented by: **Anastasios-Faidon Retselis (AEM: 4394)**\n",
-    "Language: Python\n",
+    "\n",
+    "Language: **Python**\n",
     "\n",
     "# Problem 1\n",
     "\n",
@@ -58,15 +59,19 @@
     "The impulses are given by:\n",
     "\n",
     "$$\n",
+    "\\begin{split}\n",
     "\\Delta v_{1}=v_{P} - v_{c1} \\\\ \n",
-    "\\Delta v_{2}=v_{c2} - v_{A} \\\\ \n",
+    "\\Delta v_{2}=v_{c2} - v_{A} \n",
+    "\\end{split}\n",
     "$$\n",
     "\n",
     "where\n",
     "\n",
     "$$\n",
+    "\\begin{split}\n",
     "v_{P}=\\sqrt{\\frac{\\mu}{a} \\frac{1+e}{1-e}} \\\\\n",
     "v_{A}=\\sqrt{\\frac{\\mu}{a} \\frac{1-e}{1+e}}\n",
+    "\\end{split}\n",
     "$$\n",
     "\n",
     "and the circular orbit is given by the formula:\n",
