Elaborate on iterative formula derivation

--- a/Courses/Computational Electromagnetism and Applications (ΥΦΥ203)/Problem Sets/retselis_set2.ipynb
+++ b/Courses/Computational Electromagnetism and Applications (ΥΦΥ203)/Problem Sets/retselis_set2.ipynb
@@ -28,16 +28,18 @@
     "\\Delta t<\\frac{\\Delta}{c \\sqrt{2}}\n",
     "$$\n",
     "\n",
-    "and from these two equations we can calculate the desired time stop to be some percentage of the stability limit. The phase velocity is given by the following formula:\n",
+    "and from these two equations we can calculate the desired time stop to be some percentage of the stability limit. \n",
+    "\n",
+    "From the dispersion relationship in discrete space:\n",
     "\n",
     "$$\n",
-    "v_{p}=\\frac{\\omega}{k}\n",
+    "\\frac{1}{c^{2} \\Delta t^{2}} \\sin ^{2}\\left(\\frac{\\omega \\Delta t}{2}\\right)-\\frac{1}{\\Delta x^{2}} \\sin ^{2}\\left(\\frac{\\tilde{k}_{x} \\Delta x}{2}\\right)-\\frac{1}{\\Delta y^{2}} \\sin ^{2}\\left(\\frac{\\tilde{k}_{y} \\Delta y}{2}\\right)=0\n",
     "$$\n",
     "\n",
-    "which can be rewritten as:\n",
+    "we can substitute $\\tilde{k}_{x}=\\tilde{k}cos(\\theta)$ and $\\tilde{k}_{y}=\\tilde{k}sin(\\theta)$, leading to:\n",
     "\n",
     "$$\n",
-    "\\frac{v_{p}}{c}= \\frac{2\\pi}{\\lambda k}\n",
+    "\\frac{1}{c^{2} \\Delta t^{2}} \\sin ^{2}\\left(\\frac{\\omega \\Delta t}{2}\\right)=\\frac{1}{\\Delta x^{2}} \\sin ^{2}\\left(\\frac{\\tilde{k} \\cos (\\theta) \\Delta x}{2}\\right)+\\frac{1}{\\Delta y^{2}} \\sin ^{2}\\left(\\frac{\\tilde{k} \\sin (\\theta) \\Delta y}{2}\\right)\n",
     "$$\n",
     "\n",
     "$\\tilde{k}$ can be computed using Newton-Raphson's method $\\tilde{k}_{i+1}=\\tilde{k}_{i}-f\\left(\\tilde{k}_{i}\\right) / f^{\\prime}\\left(\\tilde{k}_{i}\\right)$ which in this case can be rewritten as:\n",
@@ -46,7 +48,20 @@
     "\\tilde{k}_{i+1}=\\tilde{k}_{i}-\\frac{\\frac{1}{\\Delta x^{2}} \\sin ^{2}\\left(\\frac{\\tilde{k}_{i} \\cos (\\theta) \\Delta x}{2}\\right)+\\frac{1}{\\Delta y^{2}} \\sin ^{2}\\left(\\frac{\\tilde{k}_{i} \\sin (\\theta) \\Delta y}{2}\\right)-\\frac{1}{c^{2} \\Delta t^{2}} \\sin ^{2}\\left(\\frac{\\omega \\Delta t}{2}\\right)}{\\frac{\\cos (\\theta)}{2 \\Delta x} \\sin \\left(\\tilde{k}_{i} \\cos (\\theta) \\Delta x\\right)+\\frac{\\sin (\\theta)}{2 \\Delta y} \\sin \\left(\\tilde{k}_{i} \\sin (\\theta) \\Delta y\\right)}\n",
     "$$\n",
     "\n",
-    "We can then compute $\\tilde{k}$ for different values of the angle of incidence $\\theta$ and plot those values. This procedure has been performed for both of the desired cases in the script which can be found below:"
+    "We note that c values in the equation above are simplified (see the equation for the time step $\\Delta t$. The numerical phase velocity is given by the following formula:\n",
+    "\n",
+    "$$\n",
+    "v_{p}=\\frac{\\omega}{\\tilde{k}}\n",
+    "$$\n",
+    "\n",
+    "which can be rewritten as:\n",
+    "\n",
+    "$$\n",
+    "\\frac{v_{p}}{c}= \\frac{2\\pi}{\\lambda \\tilde{k}}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "We can then compute $\\tilde{k}$ for different values of the angle of incidence $\\theta$ and plot those values to create the desired numerical phase velocity diagram. This procedure has been performed for both of the desired cases in the script which can be found below:"
    ]
   },
   {
