Add discussion of results for exercise 2.1

--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
@@ -375,8 +375,25 @@
    "source": [
     "## Discussion\n",
     "\n",
-    "From the generated figure we can verify that we used the correct initial conditions (max y-value since the spacecraft for $t=0$ is on the positive side of the Oy axis. We also note that for one orbit the radius of the orbit remains constant, le"
+    "From the generated figure we can verify that we used the correct initial conditions (max y-value since the spacecraft for $t=0$ is on the positive side of the Oy axis. We also note that for one orbit the radius of the orbit remains constant, leading us to the conclusion that the propagator works as intended. To validate the propagator, we propagated the orbit for a total of 6000 orbits using different time steps, which can also be seen in the table below:\n",
+    "\n",
+    "| Time step [sec] | Error [%] | Run time [sec] |\n",
+    "|:---------------:|:---------:|:--------------:|\n",
+    "|        60       |  0.15354  |      36.44     |\n",
+    "|        50       |  0.06147  |      44.31     |\n",
+    "|        40       |  0.02010  |      55.11     |\n",
+    "|        30       |  0.00477  |      73.26     |\n",
+    "|        20       |  0.00063  |     110.85     |\n",
+    "\n",
+    "We can observe that even if we use a time step of 60 seconds, the percentage error remains under 1% and the run time remains sufficiently small. Decreasing the time step further improves the error on the height/radius, but the run time starts to unacceptable times. Nevertheless, we have demonstrated that the integrator implemented using the fourth order Runge-Kutta method works as intended. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
