--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
@@ -385,7 +385,7 @@
     "|        30       |  0.00477  |      73.26     |\n",
     "|        20       |  0.00063  |     110.85     |\n",
     "\n",
-    "We can observe that even if we use a time step of 60 seconds, the percentage error remains under 1% and the run time remains sufficiently small. Decreasing the time step further improves the error on the height/radius, but the run time starts to unacceptable times. Nevertheless, we have demonstrated that the integrator implemented using the fourth order Runge-Kutta method works as intended. "
+    "We can observe that even if we use a time step of 60 seconds, the percentage error remains under 1% and the run time remains sufficiently small. Decreasing the time step further improves the error on the height/radius, but the run time starts to rise to unacceptably long times. Nevertheless, we have demonstrated that the integrator implemented using the fourth order Runge-Kutta method works as intended. "
    ]
   },
   {
