Add conclusion for Exercise 2.2

--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
@@ -452,7 +452,7 @@
     "\n",
     "The integrator which we will use is similar to the one of the previous exercise (fourth order Runge-Kutta). However, to avoid any overflow issues, we will add an extra stopping condition at an altitude $h=100 km$. This stopping condition is accurate, since orbits decay rapidly at this altitude (within minutes) and furthermore any artificial satellite will start burning up due to the enormous magnitude of aerodynamic heating (thus it will not be operational). We will then plot altitude vs time diagrams for each case until the satellite decays and we will also plot a 2D view of the orbit on the XY plane. \n",
     "\n",
-    "Finally, for the coefficient of drag, a value of $C_{T}"
+    "Finally, for the coefficient of drag, a value of $C_{T}=2.2$ is considered. "
    ]
   },
   {
@@ -793,7 +793,7 @@
     "# Plot radius vs time\n",
     "plt.figure()\n",
     "plt.plot(tn, h,  label='Equation of Motion, non-relative')\n",
-    "plt.plot(tn_rel, h_rel,  label='Equation of Motion, relative)')\n",
+    "plt.plot(tn_rel, h_rel,  label='Equation of Motion, relative')\n",
     "plt.plot(t_vector, a_vector, label='Gauss Equation')\n",
     "plt.xlabel('Time, t, [seconds]')\n",
     "plt.ylabel('Altitude above Earth, h, [km]')\n",
@@ -841,6 +841,15 @@
     "      % (time_taken_relative, orbits_taken_relative))\n",
     "print(\"Using Gauss equation, satellite decays after %.2f seconds (or after %.2f orbits)\"\n",
     "      % (time_taken_gauss, orbits_taken_gauss))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discussion \n",
+    "\n",
+    "We note that in every case the integrator stops using the altitude stopping condition. From the first diagram, we can deduce that the relative and non-relative case have an almost identical shape, with the relative case decaying a little bit later since the atmosphere moves in the same direction as the spacecraft, resulting in a smaller relative velocity and thus the spacecraft decays at a later time in this case. We also note that the error for the time to re-entry between the non-relative case and the Gauss equation case is around $8.11\\%$."
    ]
   },
   {
