Add Exercise 2.3 Problem Statement

--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
@@ -849,7 +849,11 @@
    "source": [
     "## Discussion \n",
     "\n",
-    "We note that in every case the integrator stops using the altitude stopping condition. From the first diagram, we can deduce that the relative and non-relative case have an almost identical shape, with the relative case decaying a little bit later since the atmosphere moves in the same direction as the spacecraft, resulting in a smaller relative velocity and thus the spacecraft decays at a later time in this case. We also note that the error for the time to re-entry between the non-relative case and the Gauss equation case is around $8.11\\%$."
+    "We note that in every case the integrator stops using the altitude stopping condition. From the first diagram, we can deduce that the relative and non-relative case have an almost identical shape, with the relative case decaying a little bit later since the atmosphere moves in the same direction as the spacecraft, resulting in a smaller relative velocity and thus the spacecraft decays at a later time in this case. We also note that the error for the time to re-entry between the non-relative case and the Gauss equation case is around $8.11\\%$.\n",
+    "\n",
+    "# Exercise 2.3\n",
+    "\n",
+    "Include the solar radiation pressure (remove atmospheric drag). The integration shall take place for time equal to 6000 orbits of the satellite. Assume that the sun is performing a circular motion with frequency $\\n_{0}=1 deg/day$. Repeat the integration two times (a) without and (b) with shadowing of the sun from the earth. Compare the diagrams $a(t)$ and $e(t)$ of the two orbits"
    ]
   },
   {
