--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
@@ -1336,11 +1336,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Discussion\n",
+    "\n",
+    "The first two plots show us the evolution of the semi-major axis $a(t)$ and the eccentricity $e(t)$ for one orbit. In both figures we can clearly see the interval for which the satellite enters the Earth's shadow, leading to no change for the value of the semi-major axis or the eccentricity throughout this interval, indicating that our code performs as expected by canceling the perturbation due to the solar radiation pressure when the spacecraft is inside the Earth's shadow. For the desired 6000 orbits, the image is different. First, we have to point out that in both cases the spacecraft collided with the surface of the planet after 2335090 seconds for the case without shadowing and after 3515780 seconds for the case with shadowing. Nevertheless, the propagation was not stopped in order to investigate what exactly happens. From the eccentricity figure, we note that the eccentricity rises quicker in the case without shadowing, due to the fact that the force is constantly being applied to the spacecraft. For the case where the shadow is taken into account, no force is applied for about 1/3 of each orbit (see the figure of $e(t)$ for one orbit), leading to slower rise of the eccentricity for this case. From the semi-major axis figure, considering the case without shadowing, we note that the oscillation we observed in the one orbit figure is maintained for the entire 6000 orbits with the semi-major axis remaining at an almost constant value. We do note that the spacecraft crashes into the Earth's surface due to the rise of the eccentricity, eventually leading to the perigee of the orbit becoming equal to the Earth's radius. For the shadowing case, we notice a drop in altitude in an oscillatory manner, leading to a variation of almost 100 km for the value of the semi-major axis. Yet again the semi-major axis value does not drop significantly, but the rise of the eccentricity again leads the spacecraft to the Earth's surface at the perigee. "
+   ]
   }
  ],
  "metadata": {
