Add a missing section title

--- a/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
+++ b/Courses/Computational Astrodynamics (ΥΦΥ204)/Problem Sets/retselis_set2.ipynb
@@ -858,6 +858,8 @@
     "\n",
     "# Exercise 2.3\n",
     "\n",
+    "## Problem statement\n",
+    "\n",
     "Include the solar radiation pressure (remove atmospheric drag). The integration shall take place for time equal to 6000 orbits of the satellite. Assume that the sun is performing a circular motion with frequency $n_{0}=1 deg/day$. Repeat the integration two times (a) without and (b) with shadowing of the sun from the earth. Compare the diagrams $a(t)$ and $e(t)$ of the two orbits.\n",
     "\n",
     "## Solution \n",
