Add references and final formatting changes

--- a/Courses/Computational Mathematics II (ΥΦE208)/MC_reliability_simulations.ipynb
+++ b/Courses/Computational Mathematics II (ΥΦE208)/MC_reliability_simulations.ipynb
@@ -1125,24 +1125,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO\n",
+    "## Conclusions\n",
     "\n",
-    "1) Implement Mean Time to Repair\n",
-    "   - Single Event Effects are not always destructive. For example, bit flips can be fixed with an automated restart or intervention from ground station meaning that two cases will be implemented:\n",
-    "     - Automatic restart (very short time to repair ~1-2 days)\n",
-    "     - Ground station intervention (time to repair equivalent to a few passes from the ground station ~5-6 days)\n",
-    "     - Decide which repair time to do using the random number generator\n",
-    "   - For this case, no analytical solutions for the reliability function can be provided. This means that the Monte Carlo simulation will be our only tool to investigate the reliability of the system, in terms of system representation.\n",
-    "2) Perform some statistical analysis (experimental time to failure, uptime etc.)\n",
-    "3) Investigate the gain by using more MCU's (redundant or modular) and provide 3D plots."
+    "We note that in case of destructive single event effect, the dual MCU architectures seem to be the most reliable choice out of all the examined architectures. We can also note that for around $N=10000$ runs we are receiving the expected behavior for each system. Future work on this subject can include the implementation of non-destructive single event effects, which will highlight the advantages of the triple modular redundancy architectures for this system.\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "1. _Enrico Zio_, The Monte Carlo Simulation Method for System Reliability and Risk Analysis, Springer Verlag, 2013\n",
+    "2. _Stylianos Massen_, Mathematical Methods in Physics: Part II, 2014\n",
+    "3. _Martin L. Shooman_, Reliability of Computer Systems and Networks, Wiley, 2002\n",
+    "4. _Bob Gigliuto et al._, SEE Test Report Cypress EZ-USB FX2 USB Microcontroller and SMSC USB2512 USB Hub, TAMU, 2011\n",
+    "5. _Texas Instruments_, Single-event Effects Test Report of the MSP430FR5969-SP, 2019"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
